# aoc24

./: .gitattributes  .gitignore  Cargo.toml  README.md  make-ra-work.sh  rust-template.rs  rust_template.rs  savetime.sh
1/: day1.py  day1.ts  day1a.lua  day1b.lua  day1b.py  day1b.ts
1/haskell/: day1.hs
1/rust/: day1  day1.rs  day1b  day1b.rs
10/: day10.ipynb  day10a.ipynb  day10b.ipynb
10/rust/: day10.rs
11/: day11.ipynb  day11.py  day11a.ipynb
11/rust/: day11.rs
12/: day12a.ipynb  day12b.ipynb
12/rust/: day12a.rs
13/: day13a.ipynb
14/: day14a.ipynb
14/rust/: day14.rs
15/: day15a.ipynb  day15b.ipynb
15/rust/: day15.rs
16/: day16a.ipynb  day16a_OLD.ipynb  makevis.sh
17/: day17a.ipynb
17/rust/: day17.rs
18/: day18a.ipynb
19/: day19a.ipynb
2/: day2.ipynb  day2.py  day2b.py
2/haskell/: day2a.hs
2/rust/: day2.rs  day2b.rs
3/: day3.py  day3b.py
3/rust/: Cargo.toml  day3.rs  day3b.rs
3/rust/src/: main.rs
4/: day4.ipynb  day4a.ipynb  day4a.py
5/: day5a.ipynb  day5b.ipynb
5/rust/: day5.rs
6/: day6.ipynb  day6a.ipynb  day6a.py
6/rust/: day6.rs
7/: day7.ipynb  day7.py  day7a.ipynb  day7b.ipynb  day7b.py
8/: day8.ipynb  day8b.ipynb
8/rust/: day8.rs
9/: day9.ipynb  day9a.ipynb  day9b.ipynb  time_rust.txt
9/rust/: day9.rs
utils/: aoc.rs  luautils.lua  pyutils.py  pyutils_testing.ipynb  rsutils.rs
