[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

[dependencies]

[lib]
name = "aoc"
path = "utils/aoc.rs"

[[bin]]
name = "aoc24"
path = "main.rs"

[[bin]]
name = "day2b"
path = "2/rust/day2b.rs"

[[bin]]
name = "day6"
path = "6/rust/day6.rs"

[[bin]]
name = "day8"
path = "8/rust/day8.rs"

[[bin]]
name = "day9"
path = "9/rust/day9.rs"

[[bin]]
name = "day10"
path = "10/rust/day10.rs"

[[bin]]
name = "day11"
path = "11/rust/day11.rs"

[[bin]]
name = "day12a"
path = "12/rust/day12a.rs"

[[bin]]
name = "day14"
path = "14/rust/day14.rs"
